# amnezia-xray-admin

./: .dockerignore  .epic-d-baseline  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.beads/: metadata.json
.claude/skills/: release.md
.claude/skills/amnezia-ops/: SKILL.md
.claude/skills/amnezia-ops/references/: 3x-ui-panel.md  inventory.md  user-ops.md
.claude/skills/amnezia-ops/scripts/: health.sh
.github/workflows/: ci.yml  release.yml
deploy/: install.sh
docs/: amnezia-vpn-config-schema.json
docs/plans/: 2026-03-21-amnezia-xray-admin-mvp.md  2026-03-21-fix-cli-commands.md  2026-03-21-pre-release-polish.md  2026-03-21-release-prep.md  2026-03-22-telegram-ux.md
docs/plans/completed/: 2026-03-21-amnezia-xray-admin-mvp.md
docs/superpowers/plans/: 2026-04-23-epic-b-vps-migration.md  2026-04-23-scope-cleanup.md
docs/superpowers/specs/: 2026-03-21-pre-release-polish-design.md  2026-04-23-epic-b-vps-migration-design.md  2026-04-23-scope-cleanup-design.md
scripts/: release.sh
src/: app.rs  backend.rs  backend_trait.rs  config.rs  error.rs  main.rs  ssh.rs  telegram.rs
src/migrate/: bridge.rs  egress.rs  install.rs  mod.rs
src/native/: backend.rs  client.rs  config_render.rs  mod.rs  url.rs
src/telegram/: format.rs  handlers.rs  keyboards.rs  mod.rs
src/ui/: add_user.rs  dashboard.rs  mod.rs  qr.rs  setup.rs  telegram_setup.rs  theme.rs  user_detail.rs
src/xray/: client.rs  config.rs  config_render.rs  mod.rs  snapshot.rs  types.rs  url.rs
tests/fixtures/: bridge-config-sample.json  egress-config-sample.json
