[package]
name = "amnezia-xray-admin"
version = "0.1.0"
edition = "2021"
description = "Hacker-aesthetic TUI dashboard for managing Amnezia VPN's Xray server"
license = "MIT"
repository = "https://github.com/AmneziaVPN/amnezia-xray-admin"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
russh = "0.48"
russh-keys = "0.48"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "6"
qrcode = "0.14"
base64 = "0.22"
async-trait = "0.1"
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
env_logger = "0.11.9"

[dev-dependencies]
tempfile = "3"
