[package]
name = "amnezia-xray-admin"
version = "0.3.0"
edition = "2021"
description = "Personal CLI + Telegram bot for managing a native-systemd Xray VPN"
license = "MIT"
repository = "https://github.com/gaiverrr/amnezia-xray-admin"
homepage = "https://github.com/gaiverrr/amnezia-xray-admin"
authors = ["gaiverrr"]
keywords = ["vpn", "xray", "vless", "telegram", "cli"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
russh = "0.48"
russh-keys = "0.48"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "6"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
async-trait = "0.1"
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
env_logger = "0.11.9"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
